--- a/.hintrc
+++ b/.hintrc
@@ -16,6 +16,12 @@
       {
         "html-has-lang": "off"
       }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
     ]
   }
 }
